<resources>
    //+++++++++++++++++++ DATA SAVED ++++++++++++++++++++++++++++++++++++++
    <string name="choose_male">0</string>
    <string name="choose_female">1</string>

    //+++++++++++++++++++ MENUS ++++++++++++++++++++++++++++++++++++++
    <string name="app_name">Irmãos Martinho e as profissões</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="choosegender_title">Escolhe com quem queres jogar!</string>
    <string name="mainmenu_play"><![CDATA[Jogar >]]></string>
    <string name="professor">Professor</string>
    <string name="professora">Professora</string>
    <string name="aviador">Aviador</string>
    <string name="aviadora">Aviadora</string>
    <string name="bombeiro">Bombeiro</string>
    <string name="bombeira">Bombeira</string>
    <string name="pintor">Pintor</string>
    <string name="pintora">Pintora</string>
    <string name="pasteleiro">Pasteleiro</string>
    <string name="pasteleira">Pasteleira</string>
    <string name="choose_minigame_title">Escolhe a Profissão!</string>
    <string name="back_to_menu">Voltar ao Menu</string>

    //+++++++++++++++++++ PAUSE SCEEN ++++++++++++++++++++++++++++++++++++++
    <string name="pause_button_width_mod">0.07</string>
    <string name="pause_button_height_mod">0.11</string>
    <string name="pause_button_x_mod">0.90</string>
    <string name="pause_button_y_mod">0.05</string>

    <string name="pause_screen_width_mod">0.8</string>
    <string name="pause_screen_height_mod">0.8</string>
    <string name="pause_screen_x_mod">0.1</string>
    <string name="pause_screen_y_mod">0.1</string>

    <string name="pause_resume_width_mod">0.25</string>
    <string name="pause_resume_height_mod">0.15</string>
    <string name="pause_resume_x_mod">0.38</string>
    <string name="pause_resume_y_mod">0.48</string>

    <string name="pause_exit_width_mod">0.25</string>
    <string name="pause_exit_height_mod">0.15</string>
    <string name="pause_exit_x_mod">0.38</string>
    <string name="pause_exit_y_mod">0.68</string>

    //+++++++++++++++++++ FIREFIGHTER ++++++++++++++++++++++++++++++++++++++
    <string name="fire_sprite_width">0.072</string>
    <string name="fire_sprite_height">0.1</string>
    <string name="waterdrop_sprite_width">0.040</string>
    <string name="waterdrop_sprite_height">0.10</string>
    <string name="cat_sprite_width">0.072</string>
    <string name="cat_sprite_height">0.1</string>

    <string name="waterdrop_frame1_x">0</string>
    <string name="waterdrop_frame2_x">0.5</string>

    <string name="waterdrop_frame_width">0.50</string>

    <string name="cat_frame1_x">0</string>
    <string name="cat_frame2_x">0.3321</string>
    <string name="cat_frame3_x">0.6678</string>

    <string name="cat_frame_width">0.3221</string>

    <string name="water_meter_sprite_width">0.05</string>
    <string name="water_meter_sprite_height">0.7</string>
    <string name="water_meter_x">0.04</string>
    <string name="water_meter_y">0.25</string>

    <string name="fire_spawn_x1">0.414</string>
    <string name="fire_spawn_x2">0.488</string>
    <string name="fire_spawn_x3">0.560</string>

    <string name="fire_spawn_y1">0.350</string>
    <string name="fire_spawn_y2">0.490</string>
    <string name="fire_spawn_y3">0.632</string>
    <string name="fire_spawn_y4">0.769</string>

    <string name="fire_frame1_width">0.11875</string>
    <string name="fire_frame2_width">0.1405</string>
    <string name="fire_frame3_width">0.15</string>
    <string name="fire_frame4_width">0.15675</string>
    <string name="fire_frame5_width">0.1485</string>
    <string name="fire_frame6_width">0.14125</string>
    <string name="fire_frame7_width">0.1195</string>

    <string name="fire_frame1_x">0</string>
    <string name="fire_frame2_x">0.1225</string>
    <string name="fire_frame3_x">0.2667</string>
    <string name="fire_frame4_x">0.4185</string>
    <string name="fire_frame5_x">0.57975</string>
    <string name="fire_frame6_x">0.73225</string>
    <string name="fire_frame7_x">0.8805</string>

    <string name="cat_spawn_x1">0.20</string>
    <string name="cat_spawn_x2">0.27</string>
    <string name="cat_spawn_x3">0.80</string>

    <string name="cat_spawn_y1">0.78</string>
    <string name="cat_spawn_y2">0.70</string>
    <string name="cat_spawn_y3">0.76</string>

    <string name="fire_score">1</string>
    <string name="cat_score">3</string>

    <string name="star_score_height_mod">0.06</string>
    <string name="star_score_width_mod">0.04</string>
    <string name="star_score_x_mod">0.03</string>
    <string name="star_score_y_mod">0.03</string>

    <string name="star_width_mod">0.2355</string>
    <string name="empty_star_x_mod">0</string>
    <string name="one_third_star_x_mod">0.2548</string>
    <string name="two_thirds_star_x_mod">0.5046</string>
    <string name="full_star_x_mod">0.7644</string>

    <string name="water_decrease">15</string>
    <string name="water_gain">20</string>
    <string name="water_disappear_time">2</string>
    <string name="fire_disappear_time">8</string>
    <string name="cat_disappear_time">3</string>

    <string name="water_bar_height_mod">0.2675</string>
    <string name="water_bar_bottom_mod">0.8674</string>
    <string name="water_bar_left_mod">0.052</string>
    <string name="water_bar_right_mod">0.078</string>

    <string name="spawner_start_time">2500</string>
    <string name="spawner_min_time">2500</string>
    <string name="spawner_max_time">5000</string>

    <string name="water_spawner_start_time">7000</string>
    <string name="water_spawner_min_time">6000</string>
    <string name="water_spawner_max_time">8500</string>

    <string name="cat_spawn_chance">20</string>

    //+++++++++++++++++++ PAINTER ++++++++++++++++++++++++++++++++++++++
    <string name="painting_width">0.742</string>
    <string name="painting_height">0.783</string>
    <string name="painting_x">0.23</string>
    <string name="painting_y">0.105</string>
    <string name="painting_colors_radius">0.0292</string>

    <string name="left_paint_arrow_x">0.1</string>
    <string name="left_paint_arrow_y">0.83</string>
    <string name="right_paint_arrow_x">0.3</string>
    <string name="right_paint_arrow_y">0.83</string>

    //+++++++++++++++++++ PILOT ++++++++++++++++++++++++++++++++++++++

    <string name="min_height_bound">20</string>
    <string name="max_height_bound">150</string>

    <string name="gravity">7</string>

    <string name="min_daylight">20.0</string>

    <string name="pilot_health_x">0.01</string>
    <string name="pilot_health_y">0.03</string>

    <string name="pilot_record_x">0.415</string>
    <string name="pilot_record_y">0.25</string>

    <string name="pilot_score_x">0.41</string>
    <string name="pilot_score_y">0.37</string>

    <string name="pilot_max_health">3</string>
    <string name="pilot_animation_duration">0.45</string>

    <string name="pilot_rect_left">0.125</string>
    <string name="pilot_rect_top">0.208</string>
    <string name="pilot_rect_right">0.2633</string>
    <string name="pilot_rect_bot">0.3819</string>

    <string name="pilot_initial_x">0.1421</string>

    //+++++++++++++++++++ COOK +++++++++++++++++++++++++++++++++++++++
    <string name="component_panel_x">0.67</string>
    <string name="component_panel_y">0.15</string>
    <string name="component_panel_width">0.2</string>
    <string name="component_panel_height">0.7</string>

    <string name="arrow_height">0.1</string>
    <string name="arrow_width">0.15</string>
    <string name="left_arrow_x">0.1</string>
    <string name="left_arrow_y">0.83</string>
    <string name="right_arrow_x">0.3</string>
    <string name="right_arrow_y">0.83</string>

    <string name="cake_width">0.2</string>
    <string name="cake_height">0.2</string>
    <string name="cake_x">0.18</string>
    <string name="cake_y">0.62</string>

    <string name="one_third_sprite_shape">0.33</string>
    <string name="two_thirds_sprite_shape">0.67</string>

    <string name="one_third_sprite_coating">0.335</string>
    <string name="two_thirds_sprite_coating">0.67</string>

    <string name="one_third_sprite_topping">0.335</string>
    <string name="two_thirds_sprite_topping">0.67</string>

    <string name="one_third_sprite">0.33</string>
    <string name="two_thirds_sprite">0.67</string>

    <string name="cake_sprite_width">0.1108</string>
    <string name="interval_square">0.332</string>
    <string name="interval_circle">0.666</string>

    <string name="game_over_cake_x">0.40</string>
    <string name="game_over_cake_y">0.23</string>

    //+++++++++++++++++++ GAME OVER ++++++++++++++++++++++++++++++++++++++
    <string name="game_over_restart_option">1</string>
    <string name="game_over_exit_option">2</string>

    <string name="game_over_screen_width_mod">0.8</string>
    <string name="game_over_screen_height_mod">0.8</string>
    <string name="game_over_screen_x_mod">0.1</string>
    <string name="game_over_screen_y_mod">0.1</string>

    <string name="game_over_restart_width_mod">0.25</string>
    <string name="game_over_restart_height_mod">0.15</string>
    <string name="game_over_restart_x_mod">0.38</string>
    <string name="game_over_restart_y_mod">0.48</string>

    <string name="game_over_exit_width_mod">0.25</string>
    <string name="game_over_exit_height_mod">0.15</string>
    <string name="game_over_exit_x_mod">0.38</string>
    <string name="game_over_exit_y_mod">0.68</string>

    <string name="game_over_character_width_mod">0.20</string>
    <string name="game_over_character_height_mod">0.60</string>
    <string name="game_over_character_x_mod">0.14</string>
    <string name="game_over_character_y_mod">0.25</string>

    <string name="game_over_profession_width_mod">0.20</string>
    <string name="game_over_profession_height_mod">0.20</string>
    <string name="game_over_profession_x_mod">0.65</string>
    <string name="game_over_profession_y_mod">0.55</string>

    <string name="title_activity_tracker">Map</string>
</resources>
