<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/mainBlue"
    >

    <TableLayout
        android:layout_width="520dp"
        android:layout_height="match_parent"
        android:id="@+id/tableLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="65dp"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:background="@color/mainYellow"
                android:onClick="fireFighterGame"
                android:src="@drawable/martinhobombeiro"
                android:text="@string/bombeiro"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:background="@color/mainYellow"
                android:src="@drawable/martinhopasteleiro"
                android:text="@string/pasteleiro" />


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:background="@color/mainYellow"
                android:src="@drawable/martinhoprofessor"
                android:text="@string/professor" />


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:background="@color/mainYellow"
                android:src="@drawable/martinhopintor"
                android:text="@string/pintor" />


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:background="@color/mainYellow"
                android:src="@drawable/martinhopiloto"
                android:text="@string/aviador" />

        </TableRow>

    </TableLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="@color/titleColor"
        android:text="@string/choose_minigame_title"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="445dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/mainYellow"
        android:textSize="15dp"
        android:text="@string/back_to_menu"
        />
    
    
    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        />
</RelativeLayout>
